--- a/lists/templates/base.html
+++ b/lists/templates/base.html
@@ -26,7 +26,7 @@
         <div class="col-md-6 col-md-offset-3 jumbotron">
             <div class="text-center">
                 <h1>{% block header_text %}{% endblock %}</h1>
-                <form method="POST" action="{% block form_action %}{% endblock %}">
+                <form method="POST" action="{% block fo rm_action %}{% endblock %}">
                     {{ form.text }}
                     {% csrf_token %}
                     {% if form.errors %}
@@ -55,7 +55,7 @@
     /*global $, Superlists, navigator */
     $(document).ready(function () {
         var user = "{{ user.email }}" || null;
-        var token = "{{ csrf_token }}";
+        var token = "{% csrf_token %}";
         var urls = {
             login: "{% url 'persona_login' %}",
             logout: "TODO"
